# cpp-cern

./: .gitignore  README.md
exercises/asan/: Makefile  asan.cpp  compile_commands.json
exercises/basicTypes/: basicTypes.cpp  compile_commands.json
exercises/basicTypes/.cache/clangd/index/: PrintHelper.h.6610D4DC20F6F0F0.idx  basicTypes.cpp.71AE11EC94B4DBF6.idx
exercises/classes/: classes.cpp  compile_commands.json
exercises/condition_variable/: compile_commands.json  condition_variable.cpp
exercises/constness/: compile_commands.json  constplay.cpp
exercises/control/: compile_commands.json  control.cpp
exercises/control/.cache/clangd/index/: control.cpp.B51EEC4D40A15FA9.idx
exercises/functions/: compile_commands.json  functions.cpp
exercises/loopsRefsAuto/: compile_commands.json  loopsRefsAuto.cpp
exercises/move/: compile_commands.json  trymove.cpp
exercises/operators/: CMakeLists.txt  compile_commands.json  operators.cpp
exercises/optional/: compile_commands.json  optional.cpp
exercises/polymorphism/: compile_commands.json  trypoly.cpp
exercises/race/: compile_commands.json  racing.cpp
exercises/smartPointers/: compile_commands.json  problem1.cpp  problem2.cpp  problem3.cpp  problem4.cpp  problem5.cpp
exercises/spaceship/: .clang-format
exercises/stl/: compile_commands.json  randomize  randomize.cpp
exercises/templates/: OrderedVector.hpp  compile_commands.json  playwithsort.cpp
exercises/variant/: compile_commands.json  variant.cpp
exercises/virtual_inheritance/: compile_commands.json  trymultiherit.cpp
(+4 files in other folders)
